--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==23.9.1
 click==8.1.7
 colorama==0.4.6
 crispy-bootstrap4==2022.1
+dj-database-url==2.1.0
 Django==4.2.5
 django-crispy-forms==2.0
 mypy-extensions==1.0.0
@@ -10,5 +11,8 @@ packaging==23.1
 pathspec==0.11.2
 Pillow==10.0.1
 platformdirs==3.10.0
+psycopg2==2.9.8
 sqlparse==0.4.4
+typing_extensions==4.8.0
 tzdata==2023.3
+whitenoise==6.5.0
