--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ crispy-bootstrap4==2022.1
 dj-database-url==2.1.0
 Django==4.2.5
 django-crispy-forms==2.0
+gunicorn==21.2.0
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.2
